--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
+build = "build.rs"
 name = "process-queue"
 version = "0.1.0"
-build = "build.rs"
 
 [[bin]]
 name = "pqueue"
-path ="src/main.rs"
+path = "src/main.rs"
 
 [build-dependencies]
 clap = "2.20.3"
@@ -16,3 +16,4 @@ clap = "2.20.3"
 dbus = "0.5.0"
 env_logger = "0.4.0"
 log = "0.3.6"
+regex = "0.2.1"
