--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
 build = "build.rs"
+license = "GPL-3.0"
 name = "process-queue"
+readme = "README.md"
 version = "0.1.0"
 
 [[bin]]
@@ -13,7 +15,10 @@ clap = "2.20.3"
 
 [dependencies]
 clap = "2.20.3"
+daemonize = "0.2.3"
 dbus = "0.5.0"
 env_logger = "0.4.0"
 log = "0.3.6"
 regex = "0.2.1"
+users = "0.5.2"
+xdg = "2.0.0"
