--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ clap = "2.20.3"
 clap = "2.20.3"
 daemonize = "0.2.3"
 dbus = "0.5.0"
-env_logger = "0.4.0"
-log = "0.3.6"
 regex = "0.2.1"
+slog = "1.5.2"
+slog-term = "1.5.0"
 users = "0.5.2"
 xdg = "2.0.0"
