--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,32 @@
 [package]
 authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
-description = "Queue programs for execution"
-build = "build.rs"
-license = "GPL-3.0"
+description = "Command-line task queue"
+license = "MIT"
 name = "process-queue"
 readme = "README.md"
-version = "0.1.1"
-repository = "https://bitbucket.org/Soft/process-queue"
+version = "0.2.0"
+repository = "https://github.com/Soft/process-queue"
+edition = "2018"
 keywords = ["queue"]
 categories = ["command-line-utilities"]
+
+[profile.release]
+lto = true
+panic = "abort"
+codegen-units = 1
 
 [[bin]]
 name = "pqueue"
 path = "src/main.rs"
 
-[build-dependencies]
-clap = "2.20.3"
-
 [dependencies]
-clap = "2.20.3"
-daemonize = "0.2.3"
-dbus = "0.5.0"
-regex = "0.2.1"
-slog = "1.5.2"
-slog-json = "1.2.1"
-slog-stream = "1.2.0"
-slog-term = "1.5.0"
-users = "0.5.2"
-xdg = "2.0.0"
-
-[profile.release]
-lto = true
-panic = "abort"
+anyhow = "1"
+bytes = "1"
+libc = "0.2"
+log = { version = "0.4", default-features = false }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+shlex = "0.1"
+simplelog = { version = "0.8", default-features = false }
+structopt = { version = "0.3", default-features = false }
+tokio = { version = "1", features = ["net", "process", "rt-multi-thread", "io-util", "sync", "signal", "macros", "time"] }
